{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 35,
  "lineage": "2ed82522-63ed-d468-d2c8-29584a972dd1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e09d0d8aa0164090",
            "arn": "arn:aws:ec2:eu-west-1:911167908800:elastic-ip/eipalloc-0e09d0d8aa0164090",
            "domain": "vpc",
            "id": "eipalloc-0e09d0d8aa0164090",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-99-80-183-194.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.80.183.194",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "innovatemart-eks-cluster-nat-eip"
            },
            "tags_all": {
              "Name": "innovatemart-eks-cluster-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:911167908800:internet-gateway/igw-09c85b6343d75a813",
            "id": "igw-09c85b6343d75a813",
            "owner_id": "911167908800",
            "tags": {
              "Name": "innovatemart-eks-cluster-igw"
            },
            "tags_all": {
              "Name": "innovatemart-eks-cluster-igw"
            },
            "vpc_id": "vpc-0982ca20748654f19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.innovatemart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e09d0d8aa0164090",
            "association_id": "eipassoc-026779750ac230d92",
            "connectivity_type": "public",
            "id": "nat-0d25b953b05e48b21",
            "network_interface_id": "eni-00b90f0caf0a419ff",
            "private_ip": "10.0.10.220",
            "public_ip": "99.80.183.194",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b62321f20d373f16",
            "tags": {
              "Name": "innovatemart-eks-cluster-nat-gw"
            },
            "tags_all": {
              "Name": "innovatemart-eks-cluster-nat-gw"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnets",
            "aws_vpc.innovatemart_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:911167908800:route-table/rtb-01f594b4bdb8b8dfd",
            "id": "rtb-01f594b4bdb8b8dfd",
            "owner_id": "911167908800",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d25b953b05e48b21",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "innovatemart-eks-cluster-private-rt"
            },
            "tags_all": {
              "Name": "innovatemart-eks-cluster-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0982ca20748654f19"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_subnet.public_subnets",
            "aws_vpc.innovatemart_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:911167908800:route-table/rtb-03a525795abf67e3e",
            "id": "rtb-03a525795abf67e3e",
            "owner_id": "911167908800",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09c85b6343d75a813",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0982ca20748654f19"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.innovatemart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa9a4eb71eaa554c",
            "route_table_id": "rtb-01f594b4bdb8b8dfd",
            "subnet_id": "subnet-06e57010ac28dea2a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.innovatemart_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f78c0bf59c51e766",
            "route_table_id": "rtb-01f594b4bdb8b8dfd",
            "subnet_id": "subnet-08828c5cdf4210481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.innovatemart_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac8583f7c670f9c5",
            "route_table_id": "rtb-03a525795abf67e3e",
            "subnet_id": "subnet-0b62321f20d373f16"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.innovatemart_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04929952ec4af8b6e",
            "route_table_id": "rtb-03a525795abf67e3e",
            "subnet_id": "subnet-0f63dcb5475506232"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.innovatemart_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:911167908800:subnet/subnet-06e57010ac28dea2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e57010ac28dea2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911167908800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "innovatemart-eks-cluster-private-subnet-0",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "innovatemart-eks-cluster-private-subnet-0",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0982ca20748654f19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.innovatemart_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:911167908800:subnet/subnet-08828c5cdf4210481",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08828c5cdf4210481",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "911167908800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "innovatemart-eks-cluster-private-subnet-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "innovatemart-eks-cluster-private-subnet-1",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0982ca20748654f19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.innovatemart_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:911167908800:subnet/subnet-0b62321f20d373f16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b62321f20d373f16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911167908800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "innovatemart-eks-cluster-public-subnet-0",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "innovatemart-eks-cluster-public-subnet-0",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0982ca20748654f19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.innovatemart_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:911167908800:subnet/subnet-0f63dcb5475506232",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f63dcb5475506232",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "911167908800",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "innovatemart-eks-cluster-public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "innovatemart-eks-cluster-public-subnet-1",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0982ca20748654f19"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.innovatemart_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "innovatemart_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:911167908800:vpc/vpc-0982ca20748654f19",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b0c9e1407d849978",
            "default_route_table_id": "rtb-057c546b24621d91f",
            "default_security_group_id": "sg-09616de8ed0e351e1",
            "dhcp_options_id": "dopt-0af6da7ed1dcce796",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0982ca20748654f19",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-057c546b24621d91f",
            "owner_id": "911167908800",
            "tags": {
              "Name": "innovatemart-eks-cluster-vpc"
            },
            "tags_all": {
              "Name": "innovatemart-eks-cluster-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}